# simplex

./: '  .clang-format  .gitmodules  .ignore  CMakeLists.txt  GameEngine  Makefile  README.md  build.sh  compile_commands.json  todo.md
.cache/clangd/index/: Buffer.h.CCE787DCD5EEE949.idx  Character.h.5A8E18CFB53F1DF6.idx  Font.h.3A5F89CE092DB19A.idx  Input.cpp.9EDDAA4016DF0F5D.idx  Input.h.923DB8A9736A289A.idx  Renderer.cpp.4B4254434429E0B8.idx  Renderer2D.h.8A783499965607FA.idx  ResourceManager.cpp.E567E1384EE75235.idx  ResourceManager.h.C155F5D9A6ACDC19.idx  Shader.cpp.6A0CF209A6D730D4.idx  Shader.h.1747AC4053CA7C45.idx  Simplex.cpp.6F2EBC62DA548941.idx  Simplex.h.85C282EFE7681461.idx  Sprite.h.CCC842B8C6C47F8C.idx  Texture.cpp.430C9A3DDF2A1989.idx  Texture.h.474EB95F01FFD3FB.idx  VertexArray.cpp.2B1D25F8ACCB2399.idx  VertexArray.h.52CEE24452C03588.idx  View.cpp.D00A820681D882A0.idx  View.h.8B858A69B6625DA6.idx  _fixes.hpp.D9CDC390A776780D.idx  _vectorize.hpp.120A0711A29F1723.idx  common.hpp.35D5EB95D83F95AB.idx  compute_common.hpp.6B50E616C50394BD.idx  compute_vector_relational.hpp.5E8B1CC37777604B.idx  exponential.hpp.5BBAAB1685043F2E.idx  freetype.h.C0A17E3893B913BD.idx  ft2build.h.42849E86645F14D7.idx  ftconfig.h.088A23E02436F2AF.idx  fterrdef.h.8009C754A0749564.idx  fterrors.h.070558B084CFB1C9.idx  ftheader.h.5F31DCAA270785CB.idx  ftimage.h.547B1B65CBE17745.idx  ftmoderr.h.DD4D5C9CEAE5B1E5.idx  ftoption.h.6C16E18832EF58C6.idx  ftstdlib.h.61E87CF2C35216C6.idx  ftsystem.h.9796596709A72601.idx  fttypes.h.8951DA3872AAC8E7.idx  func_common.inl.ED2C921F73064219.idx  func_exponential.inl.8BD59B27CE9A0064.idx  (+134 more)
examples/: main.cpp
src/: main.cpp
src/components/: Camera.h  MoveableCamera.h  Sprite.h  SpriteRenderer.h  Transform.h
src/core/: Buffer.h  Component.h  ComponentList.h  ComponentManager.h  Entity.h  EntityManager.h  Input.cpp  Input.h  RectBounds.h  Registry.cpp  Registry.h  Renderer.cpp  Renderer2D.cpp  Renderer2D.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Simplex.cpp  Simplex.h  Sprite.h  SystemManager.cpp  SystemManager.h  Types.h  VertexArray.cpp  VertexArray.h  View.cpp  View.h
src/graphics/: Font.h  IRenderer.h  QuadBuffer.h  QuadRenderer.h  RenderBuffer.cpp  RenderBuffer.h  Renderer2D.cpp  Renderer2D.h  RendererManager.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
src/graphics/render-commands/: SpriteCommand.h
src/graphics/renderers/: IRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
src/graphics/text/: Character.h  Font.h
src/graphics/util/: Buffer.h  PositionSortedBuffer.h  QuadBuffer.h  RenderData.h  RenderSpace.h  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
src/gui/: UIBuilder.h  UIComponents.h  UISystem.h
src/shaders/: fSpriteShader.glsl  vSpriteShader.glsl  vTextShader.glsl
src/systems/: CameraSystem.h  MoveableCameraSystem.h  RenderSystem.h  System.h
